[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/LevelUI/ground.png" type="Texture" id=1]
[ext_resource path="res://Sprites/LevelUI/menu.png" type="Texture" id=2]
[ext_resource path="res://Sprites/LevelUI/menu p.png" type="Texture" id=3]
[ext_resource path="res://Sprites/LevelUI/pause.png" type="Texture" id=4]
[ext_resource path="res://Sprites/LevelUI/task.png" type="Texture" id=5]
[ext_resource path="res://Sprites/LevelUI/task p.png" type="Texture" id=6]
[ext_resource path="res://Sprites/LevelUI/Group 26.png" type="Texture" id=7]
[ext_resource path="res://Scripts/UiSmart.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Level7/MainScene.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/LevelUI/time.png" type="Texture" id=10]
[ext_resource path="res://Fonts/RubikOne-Regular.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0.14902, 0.647059, 1, 1 )
font_data = ExtResource( 11 )

[node name="UiSmart" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="MainScene" parent="." instance=ExtResource( 9 )]
position = Vector2( -16, -43 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = -48.0
margin_right = 1704.0
margin_bottom = 19.0
color = Color( 0.0823529, 0.145098, 0.333333, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -7.0
margin_top = 751.0
margin_right = 1695.0
margin_bottom = 871.0
texture = ExtResource( 1 )
expand = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )

[node name="Back_bt" type="TextureButton" parent="TextureButton"]
margin_left = 64.0
margin_top = 60.0
margin_right = 126.0
margin_bottom = 121.0
texture_normal = ExtResource( 7 )

[node name="menu" type="TextureButton" parent="TextureButton"]
margin_left = 155.0
margin_top = 62.0
margin_right = 210.0
margin_bottom = 117.0
texture_normal = ExtResource( 4 )
expand = true

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 6.0
margin_top = 127.0
margin_right = 242.0
margin_bottom = 413.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="time_counter" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -418.0
margin_top = 7.0
margin_right = -45.0
margin_bottom = 171.0
texture = ExtResource( 10 )
expand = true

[node name="Label" type="Label" parent="time_counter"]
margin_left = 167.0
margin_top = 67.0
margin_right = 246.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0.14902, 0.647059, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "00:00
"

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="pressed" from="TextureButton/Back_bt" to="." method="_on_Back_bt_pressed"]
[connection signal="pressed" from="TextureButton/menu" to="." method="_on_menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
